syntax = "proto3";
package cv_service.api;
option go_package = "../api";

// ---------------------------------------------------------------------------------------
import "library/googleapis/google/api/annotations.proto";
import "cv_service/api/data.proto";

service CVService {
  rpc RegisterCICForUser(RegisterCICForUserRequest) returns (RegisterCICForUserResponse) {
    option (google.api.http) = {
      post: "/api/v1/cic/register",
      body: "*"
    };
  }
  rpc GetCICByUserId(GetCICByUserIdRequest) returns (GetCICByUserIdResponse) {
    option (google.api.http) = {
      post: "/api/v1/cic/get",
      body: "*"
    };
  }
  rpc RegisterUserFace(RegisterUserFaceRequest) returns (RegisterUserFaceResponse) {
    option (google.api.http) = {
      post: "/api/v1/face/register",
      body: "*"
    };
  }
  rpc AuthorizeUserFace(AuthorizeUserFaceRequest) returns (AuthorizeUserFaceResponse) {
    option (google.api.http) = {
      post: "/api/v1/face/authorize",
      body:"*"
    };
  }
}