syntax = "proto3";
package cv_service.api;
option go_package = "../api";

// ---------------------------------------------------------------------------------------

import "library/envoyproxy/validate/validate.proto";

message RegisterCICForUserRequest {
  int64 user_id = 1 [(validate.rules).int64 = {gt: 0}];
  bytes front = 2;
  bytes back = 3;
}

message RegisterCICForUserResponse {
  int64 code = 1;
  string message = 2;
  CitizenIdentityCard data = 3;
}

message GetCICByUserIdRequest {
  int64 user_id = 1 [(validate.rules).int64 = {ignore_empty: false, gt: 0}];
}

message GetCICByUserIdResponse {
  int64 user_id = 1;
  CitizenIdentityCard card = 2;
}

message CitizenIdentityCard {
  string id = 1;
  int64 register_date = 2 [(validate.rules).int64 = {gt:0}];
  int64 expire_date = 3 [(validate.rules).int64 = {gt: 0}];
  string provider = 4;
  int64 birthday = 5 [(validate.rules).int64 = {gt: 0}];
  string born_province = 6 [(validate.rules).string = {min_len: 0, max_len: 255}];
  string name = 7 [(validate.rules).string = {min_len: 0}];
  Gender gender = 8;
  string country = 9;
  string location = 10;
}

message RegisterUserFaceRequest {
  int64 user_id = 1 [(validate.rules).int64 = {gt: 0}];
  bytes image = 2 [(validate.rules).bytes = {ignore_empty: false, min_len: 0}];
}

message RegisterUserFaceResponse {
  int64 code = 1;
  string message = 2;
}

message AuthorizeUserFaceRequest {
  int64 user_id = 1 [(validate.rules).int64 = {gt: 0}];
  bytes image = 2 [(validate.rules).bytes = {ignore_empty: false, min_len: 0}];
}

message AuthorizeUserFaceResponse {
  int64 code = 1;
  int64 user_id = 2;
  string message = 3;
}

enum Gender {
  MALE = 0;
  FEMALE = 1;
}